k8s/app_elixir/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-elixir-deployment
  labels:
    app: app-elixir
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-elixir
  template:
    metadata:
      labels:
        app: app-elixir
    spec:
      containers:
        - name: app-elixir
          image: nikitosing/app_elixir:arm_64
          ports:
            - containerPort: 4000
