k8s/app_elixir/service.yml
apiVersion: v1
kind: Service
metadata:
  name: elixir-service
spec:
  selector:
    app: app-elixir
  type: LoadBalancer
  ports:
    - port: 4000
