k8s/app_elixir/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elixir-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app-elixir.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elixir-service
                port:
                  number: 4000
